<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    android:padding="10dp"
    tools:context=".presentation.VendorMainActivity">

    <include
        layout="@layout/activity_user_main"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/btn_request_frame_layout"
        android:layout_width="96dp"
        android:layout_height="91dp"
        android:layout_marginEnd="4dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logoutBtn"
        app:layout_constraintTop_toBottomOf="@+id/logoutBtn">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/requests_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:onClick="onNewRequestsBtnClick"
            app:layout_constraintBottom_toTopOf="@+id/user_main_relative_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toEndOf="@+id/my_events_or_services"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_popup_reminder" />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rejectedRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/reject_button"
        android:onClick="onRejectedRequestsBtnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/vendor_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:onClick="onProfileBtnClick"
        android:text="@string/profile"
        app:layout_constraintEnd_toStartOf="@+id/logoutBtn"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout><!--        android:layout_alignEnd="@id/your_notifications_button"-->
    <!--        android:layout_alignTop="@id/your_notifications_button"-->
    <!--        app:badgeGravity="top|end"-->
