<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ServiceRequestDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/service_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="67dp" />

            <TextView
                android:id="@+id/label_request_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/request_event_name"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_type" />

            <TextView
                android:id="@+id/request_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:textSize="22sp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_request_event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/label_request_event_name" />

            <TextView
                android:id="@+id/label_request_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/request_event_description"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request_event_name" />

            <TextView
                android:id="@+id/request_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:textSize="22sp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_request_event_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/label_request_event_description"
                app:layout_constraintTop_toBottomOf="@id/request_event_name" />

            <TextView
                android:id="@+id/label_request_event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/request_event_location"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request_event_description" />

            <TextView
                android:id="@+id/request_event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:textSize="22sp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_request_event_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/label_request_event_location" />

            <TextView
                android:id="@+id/label_request_event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/request_event_date"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request_event_location" />


            <TextView
                android:id="@+id/request_event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:textSize="22sp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_request_event_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/label_request_event_date" />

            <TextView
                android:id="@+id/label_request_event_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/request_event_time"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request_event_date" />

            <TextView
                android:id="@+id/request_event_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:textSize="22sp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_request_event_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/label_request_event_time" />

            <TextView
                android:id="@+id/label_request_event_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:padding="7dp"
                android:text="@string/request_event_budget"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request_event_time" />

            <TextView
                android:id="@+id/request_event_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:textSize="22sp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_request_event_budget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/label_request_event_budget" />

            <Button
                android:id="@+id/btn_reject_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:onClick="declineRequest"
                android:text="@string/decline_request"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_accept_request"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_request_event_budget" />

            <Button
                android:id="@+id/btn_accept_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="acceptRequest"
                android:text="@string/accept_request"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_reject_request"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_reject_request" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>