...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_textViewHeader"
        app:layout_constraintVertical_bias="1.0">

        <!-- List of event requests -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/r_requestsRecView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="true"
            android:padding="16dp"
            android:scrollbars="vertical" />
    </RelativeLayout>
...
